--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "pack/plugins/submodules/commentary"]
 	path = pack/plugins/submodules/commentary
 	url = https://tpope.io/vim/commentary.git
+[submodule "pack/plugins/submodules/vim-fugitive"]
+	path = pack/plugins/submodules/vim-fugitive
+	url = https://github.com/tpope/vim-fugitive
