--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,9 @@
 [submodule "pack/plugins/submodules/nvim-lspconfig"]
 	path = pack/plugins/submodules/nvim-lspconfig
 	url = https://github.com/neovim/nvim-lspconfig
+[submodule "pack/plugins/submodules/fzf"]
+	path = pack/plugins/submodules/fzf
+	url = https://github.com/junegunn/fzf
+[submodule "pack/plugins/submodules/fzf.vim"]
+	path = pack/plugins/submodules/fzf.vim
+	url = https://github.com/junegunn/fzf.vim
