--- a/.gitmodules
+++ b/.gitmodules
@@ -37,3 +37,27 @@
 [submodule "pack/plugins/submodules/themes/bluewery.vim"]
 	path = pack/plugins/submodules/themes/bluewery.vim
 	url = https://github.com/relastle/bluewery.vim
+[submodule "pack/plugins/submodules/nvim-cmp"]
+	path = pack/plugins/submodules/nvim-cmp
+	url = https://github.com/hrsh7th/nvim-cmp
+[submodule "pack/plugins/submodules/cmp-nvim-lsp"]
+	path = pack/plugins/submodules/cmp-nvim-lsp
+	url = https://github.com/hrsh7th/cmp-nvim-lsp
+[submodule "pack/plugins/submodules/cmp-buffer"]
+	path = pack/plugins/submodules/cmp-buffer
+	url = https://github.com/hrsh7th/cmp-buffer
+[submodule "pack/plugins/submodules/cmp-nvim-lua"]
+	path = pack/plugins/submodules/cmp-nvim-lua
+	url = https://github.com/hrsh7th/cmp-nvim-lua
+[submodule "pack/plugins/submodules/cmp-pandoc.nvim"]
+	path = pack/plugins/submodules/cmp-pandoc.nvim
+	url = https://github.com/aspeddro/cmp-pandoc.nvim
+[submodule "pack/plugins/submodules/cmp_luasnip"]
+	path = pack/plugins/submodules/cmp_luasnip
+	url = https://github.com/saadparwaiz1/cmp_luasnip
+[submodule "pack/plugins/submodules/LuaSnip"]
+	path = pack/plugins/submodules/LuaSnip
+	url = https://github.com/L3MON4D3/LuaSnip
+[submodule "pack/plugins/submodules/friendly-snippets"]
+	path = pack/plugins/submodules/friendly-snippets
+	url = https://github.com/rafamadriz/friendly-snippets
