--- a/.gitmodules
+++ b/.gitmodules
@@ -70,3 +70,6 @@
 [submodule "pack/plugins/submodules/cmp-path"]
 	path = pack/plugins/submodules/cmp-path
 	url = https://github.com/hrsh7th/cmp-path
+[submodule "pack/plugins/submodules/vim-dispatch"]
+	path = pack/plugins/submodules/vim-dispatch
+	url = https://github.com/tpope/vim-dispatch
